src/snapshots/ec2hx__conf@discourse.snap
---
source: src/lib.rs
expression: config_toml
input_file: test_data/discourse
snapshot_kind: text
---
editor.insert-final-newline = true
