src/snapshots/ec2hx__conf@django.snap
---
source: src/lib.rs
expression: config_toml
input_file: test_data/django
snapshot_kind: text
---
editor.default-line-ending = "lf"
editor.insert-final-newline = true
