src/snapshots/ec2hx__conf@glob_inheritance.snap
---
source: src/lib.rs
expression: config_toml
input_file: test_data/glob_inheritance
snapshot_kind: text
---

