src/snapshots/ec2hx__conf@homebrew.snap
---
source: src/lib.rs
expression: config_toml
input_file: test_data/homebrew
snapshot_kind: text
---
editor.default-line-ending = "lf"
editor.insert-final-newline = true
