src/snapshots/ec2hx__conf@learngitbranching.snap
---
source: src/lib.rs
expression: config_toml
input_file: test_data/learngitbranching
snapshot_kind: text
---

