src/snapshots/ec2hx__conf@linux.snap
---
source: src/lib.rs
expression: config_toml
input_file: test_data/linux
snapshot_kind: text
---

