src/snapshots/ec2hx__conf@nodejs.snap
---
source: src/lib.rs
expression: config_toml
input_file: test_data/nodejs
snapshot_kind: text
---
editor.default-line-ending = "lf"
editor.insert-final-newline = true
